se agrega linea prueba

--- a/visual.html
+++ b/visual.html
@@ -7,6 +7,7 @@
     <script src="logica.js"></script>
 </head>
 <body>
-    
+    <h1>se agrega linea remoto</h1>
+    <h2>se agrega linea prueba</h2>
 </body>
 </html>
